# CppOpenGL

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  conanfile.txt
EquationSolver/: .gitmodules  CMakeLists.txt  Makefile
EquationSolver/app/: main.cpp
EquationSolver/include/: ProjectConfig.h.in  my_glm.hpp  my_lib.hpp  physics.hpp  vertexshader.hpp
EquationSolver/src/: CMakeLists.txt  physics.cpp
EquationSolver/tests/: main.cpp
app/: CMakeLists.txt  main.cpp
benchmarks/: CMakeLists.txt
openglColor/: CMakeLists.txt  tmp.hpp
openglColor/app/: CMakeLists.txt  main.cpp
openglColor/include/: color_palette.h  shader.hpp  utilities.h  variables.h.in
openglColor/resources/: fire_palette.txt
openglColor/shaders/: fragment_shader.glsl  vertex_shader.glsl
openglColor/src/: CMakeLists.txt  color_palette.cc  shader.cpp  utilities.cpp
openglHeatmap/: .color_coded  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt
openglHeatmap/app/: CMakeLists.txt  main.cpp
openglHeatmap/include/: glhelper.hpp  glhelper_impl.hpp  utilities.hpp
openglHeatmap/shaders/: fragment_shader.glsl  vertex_shader.glsl
openglHeatmap/src/: CMakeLists.txt  glhelper.cpp
openglVisualizedEquation/: CMakeLists.txt
openglVisualizedEquation/app/: CMakeLists.txt  main.cpp
openglVisualizedEquation/include/: glhelper.hpp  glhelper_impl.hpp  parameters.h  physics.hpp  project_variables.h.in  utilities.hpp
openglVisualizedEquation/shaders/: fragment_shader.glsl  vertex_shader.glsl
openglVisualizedEquation/src/: CMakeLists.txt  color_palette.cc  glhelper.cpp  physics.cpp  utilities.cpp
rubik/: CMakeLists.txt
rubik/src/: main.cpp
src/: CMakeLists.txt  my_lib.cpp  physics.cpp  vertexshader.cpp
tests/: CMakeLists.txt
